Integrated Hoptoad exception notification. More:   * Better error message when order or template can't be found   * Hoptoad API key is added through heroku key interface (command line tool)   * Extracted Shopify API key and secret also to heroku key interface (add via command line tool)

--- a/public/404.html
+++ b/public/404.html
@@ -24,7 +24,9 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <a href="javascript:history.back()">Go back</a>
+
+    <p>You may have tried to view a <em>non existing order or template</em> for your shop or maybe the address is mistyped.</p>
   </div>
 </body>
 </html>
